[package]
name = "viable_cli"
description = "A CLI wrapping the Viable language compiler"
homepage = "https://github.com/yoav-lavi/viable"
repository = "https://github.com/yoav-lavi/viable"
readme = "README.md"
version = "0.4.1"
edition = "2021"
rust-version = "1.58.0"
license = "MIT"
keywords = ["viable", "viablelang"]

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
colored = "2.0.0"
viable_compiler = { version = "0.4.1", path = "../viable_compiler" }

[[bin]]
name = "viable"
path = "./src/main.rs"
