[package]
name = "viable_cli"
description = "A CLI wrapping the Viable language compiler"
homepage = "https://github.com/yoav-lavi/viable"
repository = "https://github.com/yoav-lavi/viable"
readme = "README.md"
version = "0.13.1"
edition = "2021"
rust-version = "1.58.0"
license = "MIT"
keywords = ["viable", "viablelang", "language", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }
colored = "2.0.0"
viable_compiler = { version = "0.13.1", path = "../viable_compiler" }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
unindent = "0.1.8"
tempfile = "3"

[[bin]]
name = "viable"
path = "./src/main.rs"
