[package]
name = "viable_compiler"
description = "The Viable language compiler"
homepage = "https://github.com/yoav-lavi/viable"
repository = "https://github.com/yoav-lavi/viable"
readme = "README.md"
version = "0.11.1"
edition = "2021"
rust-version = "1.58.0"
license = "MIT"
keywords = ["viable", "viablelang"]

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
