[package]
name = "viable_compiler"
description = "The Viable language compiler"
homepage = "https://github.com/yoav-lavi/viable"
repository = "https://github.com/yoav-lavi/viable"
readme = "README.md"
version = "0.12.4"
edition = "2021"
rust-version = "1.58.0"
license = "MIT"
keywords = ["viable", "viablelang", "language", "compiler"]
categories = ["compilers"]


[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
