[package]
name = "viable_wasm"
version = "0.18.1"
edition = "2021"
rust-version = "1.58.0"
description = "WASM bindings for the Viable language compiler"
license = "MIT/Apache-2.0"
repository = "https://github.com/yoav-lavi/viable"
keywords = ["viable", "viablelang", "language", "wasm"]
categories = ["webassembly"]


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
viable_compiler = { version = "0.18.1", path = "../viable_compiler", default-features = false }
