[package]
name = "viable_wasm"
version = "0.19.0"
edition = "2021"
rust = "1.65.0"
description = "WASM bindings for the Viable language compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoav-lavi/viable"
keywords = ["viable", "viablelang", "language", "wasm"]
categories = ["webassembly"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
console_error_panic_hook = "0.1.7"
viable_compiler = { version = "0.19.0", path = "../viable_compiler", default-features = false }
